# wmbiff

./: .cvsignore  AUTHORS  CHANGES  ChangeLog  FAQ  FromCVS.sh  Makefile.am  Makefile.in  NEWS  README  RELEASE-NOTES  TODO  aclocal.m4  autogen.sh  check-includes.rb  configure  configure.ac  configure.in  wmbiff_0.2.orig.tar.gz.delta  wmbiff_0.3.8.orig.tar.gz.delta  wmbiff_0.4.26.orig.tar.gz.delta  wmbiff_0.4.26.orig.tar.gz.id  wmbiff_0.4.27.orig.tar.gz.delta  wmbiff_0.4.28.orig.tar.gz.delta
autoconf/: .cvsignore  Makefile.am  Makefile.in  acconfig.h  mkinstalldirs  xtra_corrected.m4
debian/: changelog  control  copyright  docs  examples  menu  rules  watch  wmbiff.1x
debian/patches/: 10_use_pkg-config.diff  11_autoconfgenchanges.diff  15_no_more_LZO.diff  16_gnutls_deprecated.diff  20_gnutls_set_default_priority.diff  fix_deprecated_gnutls_types.diff  fix_manpage.diff  fix_pointer_cast.diff  series  update_autotools.diff
maint/: changelog-header  changelog.sed  prerelease.sh
scripts/: Makefile.in  security.debian.rb
wmbiff/: .cvsignore  ApopClient.c  Client.h  Imap4Client.c  LicqClient.c  Makefile  Makefile.am  Makefile.in  MessageList.c  MessageList.h  Pop3Client.c  Pop3Client.h  ShellClient.c  charutil.c  charutil.h  gnutls-common.c  gnutls-common.h  maildirClient.c  mboxClient.c  passwordMgr.c  passwordMgr.h  regulo.c  regulo.h  sample.wmbiffrc  socket.c  test-make.sh  test-wmbiffrc.shell  test_tlscomm.c  test_wmbiff.c  tlsComm.c  tlsComm.h  wmbiff-master-contrast.xpm  wmbiff-master-led.xpm  wmbiff-master.xpm  wmbiff.1  wmbiff.c  wmbiffrc.5  wmbiffrc.5.in
wmgeneral/: Makefile.am  Makefile.in  list.c  list.h  misc.c  misc.h  wmgeneral.c  wmgeneral.h
